# claude-liv-conventions

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/hook-creator/: SKILL.md
.github/workflows/: claude.yml  test.yml  version-bump.yml
plugins/liv-hooks/: README.md
plugins/liv-hooks/.claude-plugin/: plugin.json
plugins/liv-hooks/hooks/ControllerServiceLayerReminder/: README.md  main.py  pyproject.toml
plugins/liv-hooks/hooks/ControllerStructureValidator/: README.md  main.py  pyproject.toml
plugins/liv-hooks/hooks/E2EPathValidator/: README.md  main.py  pyproject.toml
plugins/liv-hooks/hooks/FormRequestBlocker/: README.md  main.py  pyproject.toml
plugins/liv-hooks/hooks/VueScriptValidator/: README.md  main.py  pyproject.toml
scripts/: update-hooks.sh
tests/: __init__.py  test_controller_service_layer_reminder.py  test_controller_structure_validator.py  test_e2e_path_validator.py  test_form_request_blocker.py  test_vue_script_validator.py  utils.py
