[project]
name = "claude-liv-conventions"
version = "1.0.0"
description = "Claude Code plugin for Laravel/Inertia/Vue conventions"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (uses Claude Agent SDK)",
]
