[project]
name = "controller-service-layer-reminder"
version = "1.0.0"
description = "PostToolUse hook to remind Claude to use service classes for database mutations in controllers"
requires-python = ">=3.10"
dependencies = [
    "claude-hook-utils @ git+https://github.com/RasmusGodske/claude-hook-utils.git",
]
